tests/paczka1/fuzzy1/52708229.err
Error in line 1: S95 A897 68,4
Error in line 23: S95 A187 48,0
Error in line 28: Hkao S280 44,2
Error in line 34: Hkao S95 34,3
